change to a cooler title

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1>Best Recipes Website</h1>
     <ul>
         <a href="./recipes/lasagna.html">Lasagna</a>
     </ul>
